Tue Jun 28 06:31:26 2005  Chad Elliott  <elliott_c@ociweb.com>

        * config/zlib.mpb:
        * config/zzip.mpb:

          Changed to use 'libs' instead of lit_libs for some project types.

Mon Jun 27 07:25:08 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          My previous checkin uncovered a serious bug in MPC dealing with
          features that weren't enabled and used the specific/else
          construct.

Mon Jun 27 06:28:54 2005  Chad Elliott  <elliott_c@ociweb.com>

        * config/zzip.mpb:

          Developers insist on naming libraries differently for Windows.
          So, for UNIX related projects we use zzip and for all others we
          use zziplib.

Fri Jun 24 12:47:06 2005  Chad Elliott  <elliott_c@ociweb.com>

        * PROBLEM-REPORT-FORM:

          Adding a problem report form with requirements for submitting a
          support request.

        * modules/EM3ProjectCreator.pm:
        * modules/VC6ProjectCreator.pm:

          Removing the implementation of the get_template method since I
          have renamed the templates for these project types.

        * modules/MakeWorkspaceCreator.pm:

          Removed the setting of PWD since it isn't used in the project
          makefiles anymore.

        * templates/make.mpd:

          Fixed a problem where the output directory wouldn't be created for
          exe or library targets if it didn't exist.

        * templates/em3.mpd:
        * templates/vc6.mpd:
        * templates/em3vcp.mpd:
        * templates/vc6dsp.mpd:

          Renamed vc6dsp.mpd to vc6.mpd and em3vcp.mpd to em3.mpd.

Fri Jun 24 08:39:56 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/em3vcp.mpd:
        * templates/em3vcpdll.mpt:
        * templates/em3vcpdllexe.mpt:
        * templates/em3vcplib.mpt:
        * templates/em3vcplibexe.mpt:
        * templates/nmake.mpd:
        * templates/vc6dsp.mpd:
