@@ -224,7 +224,10 @@ specific        This scope allows assignments that are specific to a
                 }
 
                 Due to limited parsing capabilities, the else is required to
-                be on the same line as the closing curly brace.
+                be on the same line as the closing curly brace.  You may
+                also negate the project type (using '!') which will cause
+                the specific to be evaluated for all types except the type
+                specified.
 
                 If a keyword is not recognized as a valid MPC keyword, it is
                 interpreted as a template value modifier.  In this
@@ -252,7 +255,10 @@ conditional     This scope allows addition of source files conditionally
                 }
 
                 Due to limited parsing capabilities, the else is required to
-                be on the same line as the closing curly brace.
+                be on the same line as the closing curly brace.  You may
+                also negate the project type (using '!') which will cause
+                the conditional to be evaluated for all types except the
+                type specified.
 
 requires        Specifies which features should be enabled in order to
                 generate the project file.
